[package]
name = "lux-ik"
version = "0.1.0"
edition = "2021"
authors = ["Luxalpa"]
description = "Full Body Inverse Kinematics (FBIK) for games"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
nalgebra = "0.32.2"
