[package]
name = "lux-ik"
version = "0.1.1"
edition = "2021"
authors = ["Luxalpa"]
description = "Full Body Inverse Kinematics (FBIK) for games"
license = "MIT"
repository = "https://github.com/luxalpa/lux-ik"
readme = "README.md"
keywords = ["ik", "fbik", "game", "gamedev"]
categories = ["game-development", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = ">= 0.21, <= 0.23"
nalgebra = "0.32.2"

#TODO: See https://github.com/intellij-rust/intellij-rust/issues/8813
enum_dispatch = { git = "https://gitlab.com/drewcassidy/enum_dispatch.git" }
